--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ function generateCV() {
   doc.setFontSize(12);
   doc.text(
     doc.splitTextToSize(
-      "BS Information Technology Graduate | Lead Generation & Data Entry Executive | Computer & IT Skills Professional",
+      "Information Technology Graduate | Computer & IT Skills Professional
+",
       170
     ),
     20,
@@ -203,7 +204,7 @@ function generateCV() {
   y += 6;
   doc.setFont("helvetica", "normal");
   doc.text(
-    "GGES, Jalal Abad, Lodhran | unjab Govt Internship Program \n\nMarch 2025 – Present",
+    "GGES, Jalal Abad, Lodhran | March 2025 – Present",
     25,
     y
   );
@@ -293,6 +294,7 @@ y += 4;
 
 </body>
 </html>
+
 
 
 
