--- a/portfolio.html
+++ b/portfolio.html
@@ -159,8 +159,7 @@ function generateCV() {
   doc.setFontSize(12);
   doc.text(
     doc.splitTextToSize(
-      "Information Technology Graduate | Computer & IT Skills Professional
-",
+      "Information Technology Graduate | Computer & IT Skills Professional",
       170
     ),
     20,
@@ -358,6 +357,7 @@ y += 4;
 
 </body>
 </html>
+
 
 
 
