--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@ function generateCV() {
   doc.setFontSize(12);
   doc.text(
     doc.splitTextToSize(
-      "Information Technology Graduate | Computer & IT Skills Professional
-",
+      "Information Technology Graduate | Computer & IT Skills Professional",
       170
     ),
     20,
@@ -294,6 +293,7 @@ y += 4;
 
 </body>
 </html>
+
 
 
 
