--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ function generateCV() {
 
   /* ===== CERTIFICATIONS ===== */
   section("Certifications");
-
+doc.setFont("helvetica", "normal"); // <--- yahan normal set karo
+doc.setFontSize(12);
   [
     "• Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
     "• Freelancing | DigiSkills.pk",
@@ -293,6 +294,7 @@ y += 4;
 
 </body>
 </html>
+
 
 
 
