--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@ function generateCV() {
 
   /* ===== CERTIFICATIONS ===== */
   section("Certifications");
-doc.setFont("helvetica", "normal"); // <--- yahan normal set karo
-doc.setFontSize(12);
+doc.setFont("helvetica", "normal"); 
   [
     "• Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
     "• Freelancing | DigiSkills.pk",
@@ -294,6 +293,7 @@ y += 4;
 
 </body>
 </html>
+
 
 
 
