--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function generateCV() {
   y += 6;
   doc.setFont("helvetica", "normal");
   doc.text(
-    "GGES, Jalal Abad, Lodhran | March 2025 – Present",
+    "Govt. Girls Elementary School, Jalal Abad, Lodhran | March 2025 – Present",
     25,
     y
   );
@@ -293,6 +293,7 @@ y += 4;
 
 </body>
 </html>
+
 
 
 
