--- a/portfolio.html
+++ b/portfolio.html
@@ -267,7 +267,7 @@ function generateCV() {
   y += 6;
   doc.setFont("helvetica", "normal");
   doc.text(
-    "GGES, Jalal Abad, Lodhran | March 2025 – Present",
+    "Govt. Girls Elementary School, Jalal Abad, Lodhran | March 2025 – Present",
     25,
     y
   );
@@ -295,7 +295,6 @@ function generateCV() {
   /* ===== CERTIFICATIONS ===== */
   section("Certifications");
 doc.setFont("helvetica", "normal"); 
-
   [
     "• Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
     "• Freelancing | DigiSkills.pk",
@@ -354,10 +353,12 @@ y += 4;
   doc.save("Esha_Ishfaq_CV.pdf");
 }
 </script>
+
   <script src="script.js"></script>
 
 </body>
 </html>
+
 
 
 
